--- a/eggrolls-FREQ60K-MWLD-v1/templates/eggrolls-FREQ60K-MWLD-v1-styles.css
+++ b/eggrolls-FREQ60K-MWLD-v1/templates/eggrolls-FREQ60K-MWLD-v1-styles.css
@@ -1,10 +1,4 @@
 /* CSS Custom Properties (Theme System) */
-@font-face {
-  font-family: 'Source Han Serif CN';
-  src: url('_SourceHanSerifCN-Medium.otf') format('opentype');
-  font-weight: 500;
-  font-display: swap;
-}
 
 :root {
   --fg: #1f2937;
@@ -105,7 +99,7 @@ body {
 }
 
 :lang(zh-Hans) {
-  font-family: 'Source Han Serif CN', serif;
+  font-family: "PingFang SC", "PingFang TC", "Noto Sans CJK SC", "Noto Sans SC", "Roboto", "Microsoft YaHei", "Microsoft JhengHei", "SimSun", "SimHei", "WenQuanYi Micro Hei", "WenQuanYi Zen Hei", "Source Han Sans SC", "Hiragino Sans GB", "Heiti SC", "STHeiti", serif;
 }
 
 h1, h2, h3, h4, h5, h6, p {
@@ -602,7 +596,7 @@ ul, ol {
   padding-bottom: 0px;
   margin-bottom: 3px;
   font-weight: 500;
-  font-family: 'Source Han Serif CN', serif;
+  font-family: "PingFang SC", "PingFang TC", "Noto Sans CJK SC", "Noto Sans SC", "Roboto", "Microsoft YaHei", "Microsoft JhengHei", "SimSun", "SimHei", "WenQuanYi Micro Hei", "WenQuanYi Zen Hei", "Source Han Sans SC", "Hiragino Sans GB", "Heiti SC", "STHeiti", serif;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   color: var(--fg);
@@ -638,7 +632,7 @@ ul, ol {
 .translation span {
   font-weight: 500;
   color: var(--example-highlight);
-  font-family: 'Source Han Serif CN', serif;
+  font-family: "PingFang SC", "PingFang TC", "Noto Sans CJK SC", "Noto Sans SC", "Roboto", "Microsoft YaHei", "Microsoft JhengHei", "SimSun", "SimHei", "WenQuanYi Micro Hei", "WenQuanYi Zen Hei", "Source Han Sans SC", "Hiragino Sans GB", "Heiti SC", "STHeiti", serif;
 }
 
 :root.night-mode .translation-definition,
